# aur-takehome

./: .gitignore  Dockerfile  README.md  pyproject.toml
aurora/app/: api.py
aurora/data/: client.py  db.py  defs.py  models.py
tests/: conftest.py
tests/integration/: test_api.py  test_lifecycle.py
tests/unit/: test_client.py
