[tool.poetry]
name = "aurora"
version = "0.1.0"
description = "FastAPI + SQLModel project"
authors = ["you <you@example.com>"]
packages = [ { include = "aurora" } ]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = { version = "^0.22", extras = ["standard"] }
sqlmodel = "^0.0.8"
tenacity = "^8.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.0"
httpx = "^0.27"
pytest-asyncio = "^0.21"
requests = "^2.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"